# cs5600

./: LICENSE  README.md
hongchao_ELFReader/: CMakeCache.txt  CMakeLists.txt  ELFTester  Makefile  README.md  cmake_install.cmake  evaluate.sh  integrity.md5
hongchao_ELFReader/answer/: answer.c  answer.h
hongchao_ELFReader/ext/googletest/download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
hongchao_ELFReader/ext/googletest/download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
hongchao_ELFReader/include/: test_elf.h
hongchao_ELFReader/src/: elf_common_cpp.h  main.cpp
hongchao_project3_vm/src/: main.c
hongchao_project3_vm/src/answer/: QUESTIONS.md  callback.c  callback.h  data.h  memory.c  thread.c  thread.h
hongchao_project4_fs/: CMakeLists.txt  README.md
hongchao_project4_fs/src/: bitmap.c  bitmap.h  inode.h
hongchao_project4_fs/src/answer/: Questions.md  disk.c
hongchao_project4_fs/src/tests/: dirTests.c
